--- a/main.ipynb
+++ b/main.ipynb
@@ -36,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T16:10:44.739547Z",
-     "start_time": "2025-06-18T16:10:44.153149Z"
+     "end_time": "2025-06-25T04:24:15.076728Z",
+     "start_time": "2025-06-25T04:24:14.894868Z"
     }
    },
    "cell_type": "code",
@@ -51,75 +51,75 @@
    ],
    "id": "9812260dd1cca83",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-18T16:10:45.407076Z",
-     "start_time": "2025-06-18T16:10:45.349756Z"
+     "end_time": "2025-06-25T04:25:19.602795Z",
+     "start_time": "2025-06-25T04:25:19.585991Z"
     }
    },
    "cell_type": "code",
-   "source": "elderly_welfare",
+   "source": "mental_health",
    "id": "136fe60d5445658a",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "       연도           시도  노인주거복지시설_양로시설_시설수  노인주거복지시설_양로시설_정원  노인주거복지시설_양로시설_현원  \\\n",
-       "0    2018      서울Seoul                 12              1286               965   \n",
-       "1    2018      부산Busan                  6               328               282   \n",
-       "2    2018      대구Daegu                  6               473               264   \n",
-       "3    2018    인천Incheon                 16               585               355   \n",
-       "4    2018    광주Gwangju                  3               176               127   \n",
-       "..    ...          ...                ...               ...               ...   \n",
-       "97   2023    전북Jeonbuk                  8               465               313   \n",
-       "98   2023    전남Jeonnam                 14               700               482   \n",
-       "99   2023  경북Gyeongbuk                 24              1078               666   \n",
-       "100  2023  경남Gyeongnam                 13               787               445   \n",
-       "101  2023       제주Jeju                  2                90                75   \n",
+       "      No 시·도   시군구             기관명 운영구분           대표전화  \\\n",
+       "0      1  서울   강남구     강남구정신건강복지센터   직영   02-2226-0344   \n",
+       "1      2  서울   강동구     강동구정신건강복지센터   위탁    02-471-3223   \n",
+       "2      3  서울   강북구     강북구정신건강복지센터   직영    02-985-0222   \n",
+       "3      4  서울   강서구     강서구정신건강복지센터   위탁   02-2600-5926   \n",
+       "4      5  서울   관악구     관악구정신건강복지센터   직영    02-879-4911   \n",
+       "..   ...  ..   ...             ...  ...            ...   \n",
+       "247  248  경남   함양군     함양군정신건강복지센터   직영   055-960-5358   \n",
+       "248  249  경남   합천군     합천군정신건강복지센터   직영   055-930-3685   \n",
+       "249  250  제주  서귀포시    서귀포시정신건강복지센터   직영   064-760-6553   \n",
+       "250  251  제주   제주시     제주시정신건강복지센터   위탁   064-728-4074   \n",
+       "251  252  경기   평택시  송탄보건소 정신건강복지센터   분소  031-8024-7226   \n",
        "\n",
-       "     노인주거복지시설_노인공동생활가정_시설수  노인주거복지시설_노인공동생활가정_정원  노인주거복지시설_노인공동생활가정_현원  \\\n",
-       "0                        3                    27                    12   \n",
-       "1                        0                     0                     0   \n",
-       "2                        0                     0                     0   \n",
-       "3                        5                    45                    25   \n",
-       "4                        0                     0                     0   \n",
-       "..                     ...                   ...                   ...   \n",
-       "97                       4                    36                    14   \n",
-       "98                       5                    39                    18   \n",
-       "99                       2                    18                     5   \n",
-       "100                      6                    42                    29   \n",
-       "101                      0                     0                     0   \n",
+       "                           대표 이메일  \\\n",
+       "0             kcmhc2020@naver.com   \n",
+       "1              gdgmhc@hanmail.net   \n",
+       "2    kangbukcmhc@citizen.seoul.kr   \n",
+       "3              kscmhc@hanmail.net   \n",
+       "4              gkmind@hanmail.net   \n",
+       "..                            ...   \n",
+       "247               hy4081@korea.kr   \n",
+       "248              rnjjh79@korea.kr   \n",
+       "249          kangkyungim@korea.kr   \n",
+       "250              jmhc@hanmail.net   \n",
+       "251         spdogeon7250@korea.kr   \n",
        "\n",
-       "     노인의료복지시설_노인요양시설_시설수  노인의료복지시설_노인요양시설_정원  노인의료복지시설_노인요양시설_현원  \\\n",
-       "0                    202               11909               11622   \n",
-       "1                     90                5801                4772   \n",
-       "2                    102                6408                5772   \n",
-       "3                    256               11822               10677   \n",
-       "4                     78                3339                2659   \n",
-       "..                   ...                 ...                 ...   \n",
-       "97                   192                8962                6948   \n",
-       "98                   247               10039                8063   \n",
-       "99                   319               15055               11827   \n",
-       "100                  219               11704               10011   \n",
-       "101                   59                3755                3115   \n",
+       "                                                   누리집  \\\n",
+       "0     https://www.gangnam.go.kr/office/smilegn/main.do   \n",
+       "1                           https://www.happygd.co.kr/   \n",
+       "2           http://ehealth.gangbuk.go.kr/site/kr/maeum   \n",
+       "3                                     www.kscmhc.or.kr   \n",
+       "4                                 www.gwanakmaum.or.kr   \n",
+       "..                                                 ...   \n",
+       "247         https://www.hygn.go.kr/specialty/00469.web   \n",
+       "248                                       www.hc.go.kr   \n",
+       "249  https://www.seogwipo.go.kr/group/health/seogwi...   \n",
+       "250                                       www.jmhc.org   \n",
+       "251  https://www.pyeongtaek.go.kr/health/mainChm.do...   \n",
        "\n",
-       "     노인의료복지시설_노인요양공동생활가정_시설수  노인의료복지시설_노인요양공동생활가정_정원  노인의료복지시설_노인요양공동생활가정_현원  \n",
-       "0                        310                    2960                    2616  \n",
-       "1                         19                     238                     218  \n",
-       "2                        142                    1262                    1217  \n",
-       "3                        112                     996                     915  \n",
-       "4                         18                     152                     140  \n",
-       "..                       ...                     ...                     ...  \n",
-       "97                        53                     461                     389  \n",
-       "98                        71                     635                     564  \n",
-       "99                       109                     966                     853  \n",
-       "100                       44                     389                     325  \n",
-       "101                       10                      90                      78  \n",
+       "                                  주소  \n",
+       "0          서울시 강남구 자곡로100 자곡문화센터 2층   \n",
+       "1                 강동구 구천면로 297-5, 1층  \n",
+       "2            서울시 강북구 삼양로 19길 154, 3층  \n",
+       "3               서울시 강서구 공항대로 561, B1  \n",
+       "4              서울시 관악구 관악로145, 3동 4층  \n",
+       "..                               ...  \n",
+       "247             경상남도 함양군 함양읍 한들로 141  \n",
+       "248    합천군 합천읍 동서로39 보건소 3층 정신건강복지센터  \n",
+       "249  제주특별자치도 서귀포시 중앙로101번길 52 서귀포보건소  \n",
+       "250                 제주시 노형9길 9-4, 2층  \n",
+       "251            경기도 평택시 서정로 295 (서정동)  \n",
        "\n",
-       "[102 rows x 14 columns]"
+       "[252 rows x 9 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -140,107 +140,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>연도</th>\n",
-       "      <th>시도</th>\n",
-       "      <th>노인주거복지시설_양로시설_시설수</th>\n",
-       "      <th>노인주거복지시설_양로시설_정원</th>\n",
-       "      <th>노인주거복지시설_양로시설_현원</th>\n",
-       "      <th>노인주거복지시설_노인공동생활가정_시설수</th>\n",
-       "      <th>노인주거복지시설_노인공동생활가정_정원</th>\n",
-       "      <th>노인주거복지시설_노인공동생활가정_현원</th>\n",
-       "      <th>노인의료복지시설_노인요양시설_시설수</th>\n",
-       "      <th>노인의료복지시설_노인요양시설_정원</th>\n",
-       "      <th>노인의료복지시설_노인요양시설_현원</th>\n",
-       "      <th>노인의료복지시설_노인요양공동생활가정_시설수</th>\n",
-       "      <th>노인의료복지시설_노인요양공동생활가정_정원</th>\n",
-       "      <th>노인의료복지시설_노인요양공동생활가정_현원</th>\n",
+       "      <th>No</th>\n",
+       "      <th>시·도</th>\n",
+       "      <th>시군구</th>\n",
+       "      <th>기관명</th>\n",
+       "      <th>운영구분</th>\n",
+       "      <th>대표전화</th>\n",
+       "      <th>대표 이메일</th>\n",
+       "      <th>누리집</th>\n",
+       "      <th>주소</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>서울Seoul</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1286</td>\n",
-       "      <td>965</td>\n",
-       "      <td>3</td>\n",
-       "      <td>27</td>\n",
-       "      <td>12</td>\n",
-       "      <td>202</td>\n",
-       "      <td>11909</td>\n",
-       "      <td>11622</td>\n",
-       "      <td>310</td>\n",
-       "      <td>2960</td>\n",
-       "      <td>2616</td>\n",
+       "      <td>1</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>강남구</td>\n",
+       "      <td>강남구정신건강복지센터</td>\n",
+       "      <td>직영</td>\n",
+       "      <td>02-2226-0344</td>\n",
+       "      <td>kcmhc2020@naver.com</td>\n",
+       "      <td>https://www.gangnam.go.kr/office/smilegn/main.do</td>\n",
+       "      <td>서울시 강남구 자곡로100 자곡문화센터 2층</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>부산Busan</td>\n",
-       "      <td>6</td>\n",
-       "      <td>328</td>\n",
-       "      <td>282</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>90</td>\n",
-       "      <td>5801</td>\n",
-       "      <td>4772</td>\n",
-       "      <td>19</td>\n",
-       "      <td>238</td>\n",
-       "      <td>218</td>\n",
+       "      <td>2</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>강동구</td>\n",
+       "      <td>강동구정신건강복지센터</td>\n",
+       "      <td>위탁</td>\n",
+       "      <td>02-471-3223</td>\n",
+       "      <td>gdgmhc@hanmail.net</td>\n",
+       "      <td>https://www.happygd.co.kr/</td>\n",
+       "      <td>강동구 구천면로 297-5, 1층</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>대구Daegu</td>\n",
-       "      <td>6</td>\n",
-       "      <td>473</td>\n",
-       "      <td>264</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>102</td>\n",
-       "      <td>6408</td>\n",
-       "      <td>5772</td>\n",
-       "      <td>142</td>\n",
-       "      <td>1262</td>\n",
-       "      <td>1217</td>\n",
+       "      <td>3</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>강북구</td>\n",
+       "      <td>강북구정신건강복지센터</td>\n",
+       "      <td>직영</td>\n",
+       "      <td>02-985-0222</td>\n",
+       "      <td>kangbukcmhc@citizen.seoul.kr</td>\n",
+       "      <td>http://ehealth.gangbuk.go.kr/site/kr/maeum</td>\n",
+       "      <td>서울시 강북구 삼양로 19길 154, 3층</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>인천Incheon</td>\n",
-       "      <td>16</td>\n",
-       "      <td>585</td>\n",
-       "      <td>355</td>\n",
-       "      <td>5</td>\n",
-       "      <td>45</td>\n",
-       "      <td>25</td>\n",
-       "      <td>256</td>\n",
-       "      <td>11822</td>\n",
-       "      <td>10677</td>\n",
-       "      <td>112</td>\n",
-       "      <td>996</td>\n",
-       "      <td>915</td>\n",
+       "      <td>4</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>강서구</td>\n",
+       "      <td>강서구정신건강복지센터</td>\n",
+       "      <td>위탁</td>\n",
+       "      <td>02-2600-5926</td>\n",
+       "      <td>kscmhc@hanmail.net</td>\n",
+       "      <td>www.kscmhc.or.kr</td>\n",
+       "      <td>서울시 강서구 공항대로 561, B1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2018</td>\n",
-       "      <td>광주Gwangju</td>\n",
-       "      <td>3</td>\n",
-       "      <td>176</td>\n",
-       "      <td>127</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>78</td>\n",
-       "      <td>3339</td>\n",
-       "      <td>2659</td>\n",
-       "      <td>18</td>\n",
-       "      <td>152</td>\n",
-       "      <td>140</td>\n",
+       "      <td>5</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>관악구</td>\n",
+       "      <td>관악구정신건강복지센터</td>\n",
+       "      <td>직영</td>\n",
+       "      <td>02-879-4911</td>\n",
+       "      <td>gkmind@hanmail.net</td>\n",
+       "      <td>www.gwanakmaum.or.kr</td>\n",
+       "      <td>서울시 관악구 관악로145, 3동 4층</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -253,109 +223,79 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>전북Jeonbuk</td>\n",
-       "      <td>8</td>\n",
-       "      <td>465</td>\n",
-       "      <td>313</td>\n",
-       "      <td>4</td>\n",
-       "      <td>36</td>\n",
-       "      <td>14</td>\n",
-       "      <td>192</td>\n",
-       "      <td>8962</td>\n",
-       "      <td>6948</td>\n",
-       "      <td>53</td>\n",
-       "      <td>461</td>\n",
-       "      <td>389</td>\n",
+       "      <th>247</th>\n",
+       "      <td>248</td>\n",
+       "      <td>경남</td>\n",
+       "      <td>함양군</td>\n",
+       "      <td>함양군정신건강복지센터</td>\n",
+       "      <td>직영</td>\n",
+       "      <td>055-960-5358</td>\n",
+       "      <td>hy4081@korea.kr</td>\n",
+       "      <td>https://www.hygn.go.kr/specialty/00469.web</td>\n",
+       "      <td>경상남도 함양군 함양읍 한들로 141</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>전남Jeonnam</td>\n",
-       "      <td>14</td>\n",
-       "      <td>700</td>\n",
-       "      <td>482</td>\n",
-       "      <td>5</td>\n",
-       "      <td>39</td>\n",
-       "      <td>18</td>\n",
-       "      <td>247</td>\n",
-       "      <td>10039</td>\n",
-       "      <td>8063</td>\n",
-       "      <td>71</td>\n",
-       "      <td>635</td>\n",
-       "      <td>564</td>\n",
+       "      <th>248</th>\n",
+       "      <td>249</td>\n",
+       "      <td>경남</td>\n",
+       "      <td>합천군</td>\n",
+       "      <td>합천군정신건강복지센터</td>\n",
+       "      <td>직영</td>\n",
+       "      <td>055-930-3685</td>\n",
+       "      <td>rnjjh79@korea.kr</td>\n",
+       "      <td>www.hc.go.kr</td>\n",
+       "      <td>합천군 합천읍 동서로39 보건소 3층 정신건강복지센터</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>경북Gyeongbuk</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1078</td>\n",
-       "      <td>666</td>\n",
-       "      <td>2</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5</td>\n",
-       "      <td>319</td>\n",
-       "      <td>15055</td>\n",
-       "      <td>11827</td>\n",
-       "      <td>109</td>\n",
-       "      <td>966</td>\n",
-       "      <td>853</td>\n",
+       "      <th>249</th>\n",
+       "      <td>250</td>\n",
+       "      <td>제주</td>\n",
+       "      <td>서귀포시</td>\n",
+       "      <td>서귀포시정신건강복지센터</td>\n",
+       "      <td>직영</td>\n",
+       "      <td>064-760-6553</td>\n",
+       "      <td>kangkyungim@korea.kr</td>\n",
+       "      <td>https://www.seogwipo.go.kr/group/health/seogwi...</td>\n",
+       "      <td>제주특별자치도 서귀포시 중앙로101번길 52 서귀포보건소</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>경남Gyeongnam</td>\n",
-       "      <td>13</td>\n",
-       "      <td>787</td>\n",
-       "      <td>445</td>\n",
-       "      <td>6</td>\n",
-       "      <td>42</td>\n",
-       "      <td>29</td>\n",
-       "      <td>219</td>\n",
-       "      <td>11704</td>\n",
-       "      <td>10011</td>\n",
-       "      <td>44</td>\n",
-       "      <td>389</td>\n",
-       "      <td>325</td>\n",
+       "      <th>250</th>\n",
+       "      <td>251</td>\n",
+       "      <td>제주</td>\n",
+       "      <td>제주시</td>\n",
+       "      <td>제주시정신건강복지센터</td>\n",
+       "      <td>위탁</td>\n",
+       "      <td>064-728-4074</td>\n",
+       "      <td>jmhc@hanmail.net</td>\n",
+       "      <td>www.jmhc.org</td>\n",
+       "      <td>제주시 노형9길 9-4, 2층</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>101</th>\n",
-       "      <td>2023</td>\n",
-       "      <td>제주Jeju</td>\n",
-       "      <td>2</td>\n",
-       "      <td>90</td>\n",
-       "      <td>75</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>59</td>\n",
-       "      <td>3755</td>\n",
-       "      <td>3115</td>\n",
-       "      <td>10</td>\n",
-       "      <td>90</td>\n",
-       "      <td>78</td>\n",
+       "      <th>251</th>\n",
+       "      <td>252</td>\n",
+       "      <td>경기</td>\n",
+       "      <td>평택시</td>\n",
+       "      <td>송탄보건소 정신건강복지센터</td>\n",
+       "      <td>분소</td>\n",
+       "      <td>031-8024-7226</td>\n",
+       "      <td>spdogeon7250@korea.kr</td>\n",
+       "      <td>https://www.pyeongtaek.go.kr/health/mainChm.do...</td>\n",
+       "      <td>경기도 평택시 서정로 295 (서정동)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>102 rows × 14 columns</p>\n",
+       "<p>252 rows × 9 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "metadata": {
